hphp/hack/test/typecheck/coeffects/closures_subtyping_explicit.bad.php.legacy_decl.exp
File "closures_subtyping_explicit.bad.php", line 4, characters 10-31:
Invalid return type (Typing[4403])
  File "closures_subtyping_explicit.bad.php", line 3, characters 52-56:
  Expected a function that requires the capability set {Rx, WriteProperty}
  File "closures_subtyping_explicit.bad.php", line 4, characters 13-23:
  But got a function that requires the capability set {RxLocal, WriteProperty}
File "closures_subtyping_explicit.bad.php", line 8, characters 10-31:
Invalid return type (Typing[4403])
  File "closures_subtyping_explicit.bad.php", line 7, characters 49-50:
  Expected a function that requires the capability set {}
  File "closures_subtyping_explicit.bad.php", line 8, characters 13-23:
  But got a function that requires the capability WriteProperty
File "closures_subtyping_explicit.bad.php", line 13, characters 12-33:
Invalid return type (Typing[4403])
  File "closures_subtyping_explicit.bad.php", line 12, characters 59-63:
  Expected a function that requires the capability set {Rx, WriteProperty}
  File "closures_subtyping_explicit.bad.php", line 13, characters 15-25:
  But got a function that requires the capability set {RxLocal, WriteProperty}
File "closures_subtyping_explicit.bad.php", line 17, characters 12-33:
Invalid return type (Typing[4403])
  File "closures_subtyping_explicit.bad.php", line 16, characters 56-57:
  Expected a function that requires the capability set {}
  File "closures_subtyping_explicit.bad.php", line 17, characters 15-25:
  But got a function that requires the capability WriteProperty
File "closures_subtyping_explicit.bad.php", line 25, characters 22-23:
Invalid argument (Typing[4403])
  File "closures_subtyping_explicit.bad.php", line 21, characters 41-45:
  Expected a function that requires the capability set {Rx, WriteProperty}
  File "closures_subtyping_explicit.bad.php", line 24, characters 11-21:
  But got a function that requires the capability set {RxLocal, WriteProperty}
